Changelog
=========


1.0b3 (unreleased)
------------------

- Set min-height of upgrade output frame to 500px.
  [jone]

- Print exceptions to browser log stream.
  [jone]


1.0b2 (2012-07-04)
------------------

- Fix the upgrade registration problem (using a classmethod does not work
  since registration fails).
  [jone]

- Let @@manage-upgrade be usable without actually installing the GS profile.
  [maethu]


1.0b1 (2012-06-27)
------------------

- First implementation.
  [jone]